Fixes wrapping text around twitter profile pic

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1075,10 +1075,16 @@ hr.line.align-right {
 }
 
 .widget.twitter .twitter-profile-pic {
-    margin: 5px 20px 0 0;
-    //width: 45px;
-    //height: 48px;
     float: left;
+    margin-right: 0;
+    margin-top: 8px;
+	padding-right: 5%;
+	width: 15%;
+}
+
+.twitter-content {
+	float: left;
+	width: 85%;
 }
 
 .widget.twitter .twitter-content span.bk-full-name {
